external-crates/move/move-compiler/tests/move_check/parser/spec_parsing_index_fail.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/spec_parsing_index_fail.move:2:23
  │
2 │     fun index_in_prog(x: u64) {
  │                       ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'

error[E01010]: syntax item restricted to spec contexts
  ┌─ tests/move_check/parser/spec_parsing_index_fail.move:3:15
  │
3 │       let _ = x[1];
  │               ^^^^ `_[_]` index operator only allowed in specifications

